Add progress bar to colorspace conversion command

BUG: 406825